# frappe_telegram

./: pyproject.toml  requirements.txt
frappe_telegram/: __init__.py  bot.py  hooks.py
frappe_telegram/fixtures/: role.json
frappe_telegram/frappe_telegram/doctype/helpdesk_notification_recipient/: helpdesk_notification_recipient.json  helpdesk_notification_recipient.py
frappe_telegram/frappe_telegram/doctype/helpdesk_telegram_settings/: helpdesk_telegram_settings.json  helpdesk_telegram_settings.py
frappe_telegram/frappe_telegram/doctype/helpdesk_telegram_ticket/: helpdesk_telegram_ticket.json  helpdesk_telegram_ticket.py
frappe_telegram/frappe_telegram/doctype/telegram_bot/: telegram_bot.py
frappe_telegram/frappe_telegram/doctype/telegram_conversation_state/: telegram_conversation_state.json  telegram_conversation_state.py
frappe_telegram/handlers/: helpdesk.py  helpdesk_notifications.py  helpdesk_reply.py  telegram_api.py
frappe_telegram/jobs/: poll_updates.py
frappe_telegram/setup/: __init__.py
frappe_telegram/utils/: overrides.py
